--- a/HW02.vcxproj.filters
+++ b/HW02.vcxproj.filters
@@ -88,5 +88,11 @@
     <None Include="ball.vs">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="strip.fs">
+      <Filter>资源文件</Filter>
+    </None>
+    <None Include="strip.vs">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
 </Project>
